@@ -1,8 +1,24 @@
+buildscript {
+    repositories {
+        maven {
+            name = "MinecraftForge"
+            url = uri("https://files.minecraftforge.net/maven/")
+        }
+
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath(group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true)
+    }
+}
+
 plugins {
-    id("fabric-loom") version "0.12-SNAPSHOT"
     id("com.matthewprenger.cursegradle") version "1.4.0"
     id("com.diffplug.spotless") version "6.4.1"
 }
+
+apply(plugin: "net.minecraftforge.gradle")
 
 group = "me.ramidzkh"
 version = System.getenv("APPBOT_VERSION") ?: "0.0.0"
@@ -28,71 +44,23 @@ repositories {
     }
 
     maven {
-        name = "Ladysnake Libs"
-        url = uri("https://ladysnake.jfrog.io/artifactory/mods/")
+        name = "theillusivec4"
+        url = uri("https://maven.theillusivec4.top/")
 
         content {
-            includeGroup("dev.onyxstudios.cardinal-components-api")
-            includeGroup("io.github.onyxstudios.Cardinal-Components-API")
-        }
-    }
-
-    maven {
-        name = "TerraformersMC"
-        url = uri("https://maven.terraformersmc.com/")
-
-        content {
-            includeGroup("com.terraformersmc")
-            includeGroup("dev.emi")
-        }
-    }
-
-    maven {
-        name = "JamiesWhiteShirt"
-        url = uri("https://maven.jamieswhiteshirt.com/libs-release/")
-
-        content {
-            includeGroup("com.jamieswhiteshirt")
-        }
-    }
-
-    maven {
-        name = "shedaniel"
-        url = uri("https://maven.shedaniel.me/")
-
-        content {
-            includeGroup("dev.architectury")
-            includeGroup("me.shedaniel")
-            includeGroup("me.shedaniel.cloth")
-        }
-    }
-
-    maven {
-        name = "Jitpack"
-        url = uri("https://jitpack.io/")
-
-        content {
-            includeGroup("com.github.emilyploszaj")
-        }
-    }
-
-    maven {
-        name = "Walia"
-        url = uri("https://maven.bai.lol/")
-
-        content {
-            includeGroup("mcp.mobius.waila")
+            includeGroup("top.theillusivec4.curios")
         }
     }
 }
 
 dependencies {
-    minecraft("net.minecraft:minecraft:${minecraft_version}")
-    mappings(loom.officialMojangMappings())
-    modImplementation("net.fabricmc:fabric-loader:${loader_version}")
+    minecraft("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
 
-    modImplementation("appeng:appliedenergistics2-fabric:${ae2_version}")
-    modImplementation("vazkii.botania:Botania:${minecraft_version}-${botania_version}")
+    implementation(fg.deobf("appeng:appliedenergistics2:${ae2_version}"))
+    implementation(fg.deobf("vazkii.botania:Botania:${minecraft_version}-${botania_version}"))
+
+    runtimeOnly(fg.deobf("vazkii.patchouli:Patchouli:${minecraft_version}-${patchouli_version}"))
+    runtimeOnly(fg.deobf("top.theillusivec4.curios:curios-forge:${minecraft_version}-${curios_version}"))
 }
 
 java {
@@ -109,10 +77,67 @@ processResources {
     inputs.property("version", project.version)
 
     from("LICENSE")
-    exclude(".cache")
 
-    filesMatching("fabric.mod.json") {
+    filesMatching("META-INF/mods.toml") {
         expand("version": project.version)
+    }
+}
+
+jar {
+    finalizedBy("reobfJar")
+
+    from(sourceSets.main.output.classesDirs)
+    from(sourceSets.main.output.resourcesDir)
+
+    manifest {
+        attributes([
+                "Specification-Title"     : "Applied Botanics",
+                "Specification-Vendor"    : "ramidzkh",
+                "Specification-Version"   : "${project.version}",
+                "Implementation-Title"    : "${project.name}",
+                "Implementation-Version"  : "${project.version}",
+                "Implementation-Vendor"   : "ramidzkh",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
+}
+
+////////////////////
+// Forge/Minecraft
+minecraft {
+    mappings(channel: "official", version: "${minecraft_version}")
+
+    /**
+     * Configures properties common to all run configurations
+     */
+    def commonRunProperties = {
+        workingDirectory(project.file("run"))
+
+        property("forge.logging.console.level", "debug")
+        property("fml.earlyprogresswindow", "false")
+        jvmArgs("--add-opens", "java.base/sun.security.util=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.base/java.util.jar=ALL-UNNAMED")
+
+        // See https://github.com/Vazkii/Patchouli#mixin-troubleshooting
+        property("mixin.env.remapRefMap", "true")
+        property("mixin.env.refMapRemappingFile", "${projectDir}/build/createSrgToMcp/output.srg")
+        // property "mixin.debug.export", "true"
+
+        mods {
+            appbot {
+                source(sourceSets.main)
+            }
+        }
+    }
+
+    runs {
+        client {
+            with(commonRunProperties)
+        }
+
+        server {
+            with(commonRunProperties)
+        }
     }
 }
 
@@ -156,10 +181,10 @@ System.getenv("CURSEFORGE")?.with { String key ->
             }
 
             addGameVersion("${minecraft_version}")
-            addGameVersion("Fabric")
+            addGameVersion("Forge")
 
-            mainArtifact(remapJar) {
-                displayName = "${project.version}"
+            mainArtifact(jar) {
+                displayName = "${project.version} [FORGE]"
 
                 relations {
                     requiredDependency("applied-energistics-2")
